deploy/ingress/https/foo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-with-https
  labels:
    name: ingress-with-https
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - foo'
spec:
  rules:
  - host: ng.autumn.com
    http:
      paths:
      - path: "/"
        backend:
          serviceName: ingress-with-https
          servicePort: web
  tls:
    - hosts:
        - ng.autumn.com
      secretName: foo-tls
